Fix width issues and text alignment

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -8,4 +8,7 @@
   display: flex;
   justify-content: center;
   flex: 1;
+  max-width: 960px;
+  width: 100%;
+  align-self: center;
 }
