--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -2,4 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
+  width: 100%;
 }
